2008-04-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8005: Linking across domains does not work with nested domains
	* Fixed bug #7839: Linking between domains in the pagetree with checkRootline does not work with menus
	* Fixed bug #3491: Linking between domains in the pagetree ignores simulate static documents

2008-04-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7992: rtehtmlarea does not work with Firefox 3 Beta 5

2008-04-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #4575: Changes in alternative page language does not clear cache
	* Fixed bug #4768: Missing is_array() check in tslib_fe::getStorageSiterootPids()

2008-03-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7759: XCLASSing USER_INT objects does not work

2008-03-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7864: htmlArea RTE drag & drop imagebrowser does not work correctly in IE in TYPO3 4.1

2008-03-21  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7850: error in publish.php if errors in TCE should be shown (thanks to Daniel Pötzinger)

2008-03-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6907: "Conflicts" check ignores version

2008-03-17  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #4186: GIFBUILDER cropsized images have bad quality (thanks to Steffen Kamper)

2008-03-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7724: Copying of sysfolders or pages with entries connected via mm database entries fail (thanks to Niels Pardon)

2008-03-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7511: IRRE - Issues with expand/collapse of child records

2008-03-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.1.6

2008-03-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #6663: Unserialized objects not debugged properly (patch by Francois Suter)

2008-03-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5838: cli_dispatch.phpsh doesn't work on windows platforms

2008-02-28  Oliver Hader  <oh@inpublica.de>
